# mikiboxd

./: .coverage  .gitignore  .pre-commit-config.yaml  CLEANUP.md  GUIDELINES.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  info  merge_tmdb_resolution_cases.sh  movies.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  showtimes.json  test_tmdb_scraper.sh  tsconfig.json
backend/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  email.py  initial_data.py  mailer.py  main.py  scheduler.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/configs/: cinemas.yaml  letterboxd_lists.yaml
backend/app/converters/: cinema.py  city.py  movie.py  showtime.py  user.py
backend/app/core/: cinema_seating.py  config.py  db.py  enums.py  security.py  username.py
backend/app/crud/: __init__.py  analytics_event.py  cinema.py  cinema_preset.py  city.py  filter_preset.py  friend_group.py  friendship.py  item.py  letterboxd_list.py  movie.py  movie_set_filters.py  notification.py  push_token.py  saved_preset.py  showtime.py  showtime_ping.py  showtime_report.py  showtime_visibility.py  user.py  watched.py  watchlist.py
backend/app/exceptions/: __init__.py  base.py  city_exceptions.py  friends_exceptions.py  handlers.py  letterboxd_list_exceptions.py  movie.py  movie_exceptions.py  scraper_exceptions.py  showtime_exceptions.py  user.py  user_exceptions.py  watchlist.py  watchlist_exceptions.py
backend/app/inputs/: movie.py
backend/app/logging_/: logger.py
backend/app/models/: __init__.py  analytics_event.py  auth_schemas.py  cinema.py  cinema_preset.py  cinema_selection.py  city.py  filter_preset.py  friend_group.py  friendship.py  item.py  letterboxd.py  letterboxd_list.py  movie.py  notification.py  push_token.py  saved_preset.py  scrape_run.py  showtime.py  showtime_ping.py  showtime_report.py  showtime_selection.py  showtime_source_presence.py  showtime_visibility.py  tmdb_lookup_cache.py  user.py  utils.py  watched_selection.py  watchlist_digest_notified_movie.py  watchlist_digest_queue_entry.py  watchlist_selection.py
backend/app/schemas/: __init__.py  admin.py  analytics_dashboard.py  analytics_event.py  cinema.py  cinema_preset.py  city.py  filter_preset.py  friend_group.py  friendship.py  letterboxd_list.py  (+9 more)
backend/data/: cinemas.yaml  cities.yaml
backend/scripts/: backfill-movie-cast.py  backfill-movie-original-language.py  prestart.sh  rebuild-all-visibility.py  seed-cities-and-cinemas.py  test.sh
backend/tests/: conftest.py  test_dummy.py
(+599 files in other folders)
