[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx[http2]<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "tqdm<5.0.0,>=4.0.0",
    "loguru<0.8.0,>=0.7.0",
    "pytz<2026.0,>=2024.1",
    "rapidfuzz<4.0.0,>=3.0.0",
    "beautifulsoup4<5.0.0,>=4.12.2",
    "types-pytz <2026.0.0,>=2024.1.0",
    "types-requests <3.0.0,>=2.31.0",
    "types-tqdm",
    "types-python-dateutil",
    "types-PyYAML",
    "sqlalchemy-utils",
    "pre-commit",
    "pytest-mock",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
norecursedirs = [
    "venv",
    ".venv",
    "alembic",
    "migrations",
]
filterwarnings = [
  "ignore::PendingDeprecationWarning:starlette.formparsers",
  "ignore::DeprecationWarning:passlib.utils"
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP007", # X | None instead of Optional[X]
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
"**/conftest.py" = ["F403", "F405"]
